Add test-metrics-agent and metrics-smoke-tests job to metrics-discovery group

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -89,6 +89,10 @@ groups:
   <% if release == "log-cache" %>
   - lcats
   <% end %>
+  <% if release == "metrics-discovery" %>
+  - test-metrics-agent
+  - metrics-smoke-test
+  <% end %>
 <% end %>
 
 <% standalone_releases.each do |release| %>
