--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -443,6 +443,8 @@ jobs:
       CF_API: https://api.((acceptance_system_domain))
       USERNAME: admin
       SOURCE_ID: dummy-source-id
+      ORG: system
+      SPACE: blackbox-testing
 
 ###############################################################################
 # SHARED
