Add system-metrics-scraper-release to backport pipeline
[#173063645]

Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/backport.yml.erb
+++ b/pipelines/backport.yml.erb
@@ -17,6 +17,7 @@ releases = [
   Release.new("loggregator", %w(v103.x v105.5.x v105.6.x v106.2.x), "loggregator-release-blobs", false),
   Release.new("loggregator-agent", %w(v3.21.x v5.2.x v5.3.x), "loggregator-agent-release-blobs", true),
   Release.new("service-metrics", %w(v1.12.x), "oss-service-metrics-release-blobs", false),
+  Release.new("system-metrics-scraper", %w(v2.0.x), "system-metrics-scraper-release-blobs", false),
 ]
 %>
 
