Update service-metrics tasks
* manifest was moved
* fix up on-the-fly ops

[#170632235]

--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -419,7 +419,7 @@ jobs:
       SYSTEM_DOMAIN: ((acceptance_system_domain))
       BBL_STATE_DIR: ((acceptance_bbl_state_dir))
       DEPLOYMENT_NAME: service-metrics-injector
-      MANIFEST_FILE: manifests/manifest.yml
+      MANIFEST_FILE: manifests/example_manifest.yml
       OPS_FILES: |
         on-the-fly.yml
 
