--- a/pipelines/products.yml.erb
+++ b/pipelines/products.yml.erb
@@ -673,7 +673,7 @@ jobs:
       STATIC_SOURCE_IDS: |
         metron
         traffic_controller
-      JOB_BLACKLIST: |
+      JOB_DENYLIST: |
         loggregator_agent
         loggregator_trafficcontroller
         adapter
